[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-call-dedup"
version = "0.1.0"
description = "Session-scoped exact-duplicate detection for LLM tool calls"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["agent", "llm", "tool", "dedup", "idempotency", "cache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/tool_call_dedup"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
