[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-call-dedup"
version = "0.1.0"
description = "Session-scoped exact duplicate tool-call detection for agent loops — raises or returns False on repeated (tool, input) pairs. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "llm", "tool-calls", "dedup", "duplicate-detection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/tool-call-dedup"

[tool.setuptools.packages.find]
where = ["src"]
